# dnsperf

./: .clang-format  .gitignore  .lgtm.yml  .travis.yml  CHANGES  Dockerfile  Makefile.am  Makefile.in  README.md  autogen.sh  configure  configure.ac  configure.in  datafile.c  datafile.h  dns.c  dns.h  dnsperf.1  dnsperf.c  doh_curl_tests.sh  fmt.sh  log.c  log.h  net.c  net.h  opt.c  opt.h  os.c  os.h  resperf-report  resperf.1  resperf.c  sonar-project.properties.local  util.h  version.h
.copr/: Makefile
.github/: FUNDING.yml
.github/workflows/: codeql.yml
contrib/ecs-gen/: README.md  dnsperf-ecs-gen.py
contrib/queryparse/: queryparse  queryparse.1
debian/: changelog  control  copyright  dirs  dnsperf.install  resperf.install  rules
m4/: dl.sh  dnsperf.m4
rpm/: dnsperf.spec
snap/: snapcraft.yaml
src/: Makefile.am  buffer.c  buffer.h  datafile.c  datafile.h  dns.c  dns.h  dnsperf.1.in  dnsperf.c  edns.c  edns.h  gen-qtype.c.py  hg64.c  list.h  log.c  log.h  net.c  net.h  net_doh.c  net_dot.c  net_tcp.c  net_udp.c  opt.c  opt.h  os.c  os.h  perf_assert.h  qtype.c  qtype.h  random_num.c  random_num.h  resperf-report  resperf.1.in  resperf.c  result.h  strerror.c  strerror.h  tsig.c  tsig.h  util.h
src/ext/: base64.c  hg64.h  parse_uri.c  parse_uri.h
src/gsstsig/: generic_dns.c  generic_dns.h  gss.c  gss.h
src/test/: .gitattributes  Makefile.am  datafile  datafile2  datafile3  datafile4  datafile5  datafile6  largesttcp.blob  largestudp.blob  querywithcookie.blob  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  twoquerieswithnsid.blob  updatefile
