MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

CLEANFILES = test*.log test*.trs \
  test2.out test4.out test4err.out key.pem cert.pem test6.out

TESTS = test1.sh test2.sh test3.sh test4.sh test5.sh test6.sh

EXTRA_DIST = $(TESTS) \
  datafile datafile2 updatefile datafile3 datafile4 datafile5 datafile6
