MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

CLEANFILES = test*.log test*.trs \
  test2.out test4.out test4err.out key.pem cert.pem test6.out \
  10queries.tmp.blob 10queries.tmp.out empty.out emptypayload.out \
  largesttcp.out largestudp.out missingpayload.out querywithcookie.out \
  shortpayload.out tooshortlength.out twoquerieswithnsid.out

TESTS = test1.sh test2.sh test3.sh test4.sh test5.sh test6.sh test7.sh

EXTRA_DIST = $(TESTS) \
  datafile datafile2 updatefile datafile3 datafile4 datafile5 datafile6 \
  empty.blob emptypayload.blob largesttcp.blob largestudp.blob \
  missingpayload.blob querywithcookie.blob shortpayload.blob \
  tooshortlength.blob twoquerieswithnsid.blob
